--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         font-size: 24px;
         overflow: hidden;
         user-select: none;
+        font-family: 'Times New Roman', serif;
       }
       .exercise {
         position: absolute;
