Add sentence and make format consistent

--- a/index.html
+++ b/index.html
@@ -105,57 +105,57 @@
       let exercises = [
         {
           sentence:
-            "They worked hard but didn't come up with a solution ____ the problem.",
+            "They worked hard but didn't come up with a solution ___ the problem.",
           answers: ["to"],
         },
         {
-          sentence: "I was shocked ____ Sam's behaviour.",
+          sentence: "I was shocked ___ Sam's behaviour.",
           answers: ["at", "with", "by"],
         },
         {
-          sentence: "She was able to visit him ____ a regular basis.",
+          sentence: "She was able to visit him ___ a regular basis.",
           answers: ["on"],
         },
         {
-          sentence: "He spoke ____ behalf of his colleagues.",
+          sentence: "He spoke ___ behalf of his colleagues.",
           answers: ["on"],
         },
         {
-          sentence: "See you ____ the morning.",
+          sentence: "See you ___ the morning.",
           answers: ["in", "after", "before"],
         },
         {
           sentence:
-            "We are ____ good terms with our neighbours and I want it to stay like that.",
+            "We are ___ good terms with our neighbours and I want it to stay like that.",
           answers: ["on"],
         },
         {
-          sentence: "We'll meet ____ the evening.",
+          sentence: "We'll meet ___ the evening.",
           answers: ["in", "after"],
         },
         {
-          sentence: "I was born ____ 1992.",
+          sentence: "I was born ___ 1992.",
           answers: ["in", "after", "around"],
         },
         {
-          sentence: "I'll see you ____ lunch time.",
+          sentence: "I'll see you ___ lunch time.",
           answers: ["at", "after"],
         },
         {
-          sentence: "Don't be angry ____ me. I didn't do anything wrong.",
+          sentence: "Don't be angry ___ me. I didn't do anything wrong.",
           answers: ["with", "at"],
         },
         {
-          sentence: "I am absolutely capable ____ preparing my own meal.",
+          sentence: "I am absolutely capable ___ preparing my own meal.",
           answers: ["of"],
         },
         {
-          sentence: "See you ____ Tuesday!",
+          sentence: "See you ___ Tuesday!",
           answers: ["on", "after"],
         },
         {
           sentence:
-            "She was ____ high spirits because she had done well at the exam.",
+            "She was ___ high spirits because she had done well at the exam.",
           answers: ["in"],
         },
         {
@@ -165,19 +165,19 @@
         },
         {
           sentence:
-            "You're too early ____ our lesson. Why don't you go get some coffee and wait outside.",
+            "You're too early ___ our lesson. Why don't you go get some coffee and wait outside.",
           answers: ["to"],
         },
         {
-          sentence: "I am very keen ____ trying to get the right job.",
+          sentence: "I am very keen ___ trying to get the right job.",
           answers: ["on"],
         },
         {
-          sentence: "You must pay for your tickets ____ advance.",
+          sentence: "You must pay for your tickets ___ advance.",
           answers: ["in"],
         },
         {
-          sentence: "I am very keen ____ meet your mum.",
+          sentence: "I am very keen ___ meet your mum.",
           answers: ["to"],
         },
         {
@@ -209,6 +209,11 @@
           sentence:
             "My boyfriend bought me some flowers, much ___ my surprise.",
           answers: ["to"],
+        },
+        {
+          sentence:
+            "There were some funny moments ___ the scenes.",
+          answers: ["behind"],
         },
       ];
 
